[package]
name = "identity_client"
version = "3.0.1"
edition = "2024"
authors = ["Mads Hvid Byriel <madshbyriel@gmail.com>"]
description = "Identity Client"
license = "MIT"
repository = "https://github.com/madsbyriel/identity_db_client"
homepage = "https://github.com/madsbyriel/identity_db_client"
categories = []
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
identity_common = "1.0.1"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
